--- a/imc-cli-template-vue2/template/package.json
+++ b/imc-cli-template-vue2/template/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "<%= className %>",
-  "version": "<%= projectVersion %>",
+  "name": "<%= name %>",
+  "version": "<%= version %>",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
