--- a/imc-cli-template-component/template/package.json
+++ b/imc-cli-template-component/template/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "<%= className %>",
+  "name": "<%= name %>",
   "version": "<%= version %>",
   "private": false,
   "main": "dist/lego-components.umd.js",
   "module": "dist/lego-components.esm.js",
   "types": "dist/index.d.ts",
-  "description": "Lego Vue3 components library",
+  "description": "<%= description %>",
   "author": "Viking Zhang",
   "license": "MIT",
   "keywords": [
